k8/edge/ingress-nginx-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tableland-ingress-nginx
spec:
  # tls:
  #   - secretName: tableland-tls-cf-secret
  #     hosts:
  #       - tableland.edge.textile.io
  rules:
    - host: edge.tableland.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
